서비스페이지 이미지 반응형 수정

--- a/css/service.css
+++ b/css/service.css
@@ -40,7 +40,7 @@
 .row-10,
 .row-11 {
   grid-template-columns: 0.85fr 1.7fr 0.45fr;
-  min-height: 48vh;
+  min-height: 44vh;
 }
 .row-12 {
   grid-template-columns: 0.85fr 1.7fr 0.45fr;
@@ -443,10 +443,14 @@
 
 .persona-image-cell {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-end;
+  justify-content: flex-start;
   padding: 0;
   background: #000;
+}
+
+.persona-image-cell.right {
+  justify-content: flex-end;
 }
 
 .persona-image-container {
@@ -461,7 +465,7 @@
 .persona-img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: fill;
   display: block;
   background: #000;
 }
@@ -535,6 +539,14 @@ body.fade-out {
   opacity: 0;
 }
 
+@media screen and (min-height: 769px) and (max-height: 1000px){
+  .row-8,
+.row-9,
+.row-10,
+.row-11 {
+  min-height: 40vh;
+}
+}
 /* ───── Responsive Design ───── */
 @media screen and (min-width: 769px) and (max-width: 1750px) {
   .menu-icon {
