--- a/css/easy-language-model.css
+++ b/css/easy-language-model.css
@@ -223,10 +223,20 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0;
-  overflow: hidden;
-  background-color: #222;
   width: 100%;
+  height: 100%;
+  min-width: 0;
+  min-height: 0;
+  overflow: hidden;
+  padding: 0;
+}
+
+.gif-cell .fade-box {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .hand-pointer-container {
@@ -243,15 +253,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  overflow: hidden;
-  background-color: #222;
 }
 
 .hand-pointer {
   width: 100%;
   height: 100%;
-  object-fit: cover;
-  transform: scale(1.01);
+  object-fit: fill;
+  padding: 0;
+  max-width: none;
+  max-height: none;
 }
 
 .feature-cell {
@@ -376,6 +386,7 @@
 }
 
 .tab-panel h3 {
+  width: 110%;
   font-family: var(--font-apple);
   font-size: clamp(1.5rem, 2vw, 2rem);
   margin-bottom: 35px;
